assets/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@import "styles";

figcaption {
  font-size: 0.75em;
  text-align: center;
}
.crosspost {
  border: 3px solid red;
  background-color: #ffcccc;
  padding: 5px;
  text-align: center;
  color: red;
  font-size: 0.8em;
  border-radius: 10px;
  margin: 0;
} 
.mug {
  width: 200px;
  padding: 2px;
  border: 1px solid #003366;
  margin: 5px;
  clear: both;
  clip-path: circle(90px at center);
}
.logo {
  width: 300px;
  padding: 2px;
  margin: 5px;
  clear: both;
}

img[alt$=">"] {
    float: right;
  }
  
img[alt$="<"] {
    float: left;
 }
  
 img[alt$="><"] {
    display: block;
    max-width: 100%;
    height: auto;
    margin: auto;
    float: none!important;
 }



.tag-box a {
  padding: 4px 6px;
  margin: 2px;
  background-color: #e6e6e6;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  text-decoration: none;
}

.tag-box a span {
  vertical-align: super;
  font-size: 10px;
  font-size: 0.625rem;
}

.tags a {
  background-color: black;
  color: white;
  font-size: 0.8em;
  padding: 0.5em;
  border-radius: 1.0em;
  border: 1px solid black;
}

.tags a:hover {
  background-color: white;
  border: 1px solid black;
  color: black;
}

.tags ul {
 list-style-type: none;
}

.tags ul li {
  float: left;
  margin: 0.25em 0.25em;
}

a[href^="https://twitter.com/"] {
  white-space: nowrap;
  color: #1da1f2;
}

li a {text-decoration: underline;}
h2 {font-size: 1.5rem; }

